--- a/popup.html
+++ b/popup.html
@@ -5,8 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resaerch buddie</title>
+    <link rel="stylesheet" href="homepage.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
-    hello buddie
+    <div class="extension">
+        <div class="header"> Resaerch buddy </div>
+        <div class="emptydiv">
+            <img src="./images/save icon.png" alt="">
+            <span id="emptytext">Create a new citation and organize your collection here</span>
+        </div>
+        <div class="notemptydiv">
+            not empty
+        </div>
+        <div class="newcitation">
+            <button class="newcitationbutton">
+                <div id="newcitationtext">New citation</div>
+                <img src="./images/addCitation.png" alt="">
+            </button>
+        </div>
+        <script src="Script.js"></script>
+    </div>
 </body>
 </html>
