data in proper format

--- a/popup.html
+++ b/popup.html
@@ -18,13 +18,17 @@
             <span id="emptytext">Create a new citation and organize your collection here</span>
         </div>
         <div class="notemptydiv">
-            not empty
+                
         </div>
         <div class="newcitation">
             <button class="newcitationbutton">
                 <div id="newcitationtext">New citation</div>
                 <img src="./images/addCitation.png" alt="">
             </button>
+            <div class="formatentry">
+                <div class="formatentrytype">Books</div>
+                <div class="formatentrytype">Journal</div>
+            </div>
         </div>
         <script src="Script.js"></script>
     </div>
